cli/tests/snapshot/snapshots/snapshot__eval_stderr_enum_forall_parametricity_violation.ncl.snap
---
source: cli/tests/snapshot/main.rs
expression: err
---
error: function types mismatch
  ┌─ <unknown> (generated by evaluation):1:16
  │
1 │ [| 'x; r |] -> [| 'y; r |]
  │                ----------- this part of the expected type
  │
  ┌─ <unknown> (generated by evaluation):1:16
  │
1 │ [| 'x; r |] -> [| 'y, 'z; _erows_a |]
  │                ---------------------- does not match this part of the inferred type
  │
  ┌─ [INPUTS_PATH]/errors/enum_forall_parametricity_violation.ncl:4:3
  │
4 │   match { 'x => 'y, _ => 'z }
  │   ^^^^^^^^^^^^^^^^^^^^^^^^^^^ this expression
  │
  = Expected an expression of type `[| 'x; r |] -> [| 'y; r |]`
  = Found an expression of type `[| 'x; r |] -> [| 'y, 'z; _erows_a |]`
  = Could not match the two function types

error: while matching function types: values of type `[| 'z; _erows_a |]` are not guaranteed to be compatible with polymorphic enum tail `[| ; r |]`
 = Type variables introduced in a `forall` range over all possible types.


